// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content component renders profile with avatar matches snapshot 1`] = `
<div>
  <Avatar$2
    image="https://avatar_url.com"
    onClick={[Function]}
    size="small"
  />
  <Menu$2
    anchorElement={null}
    onClose={[Function]}
    open={false}
  >
    <MenuItem$3
      component={[Function]}
      onClick={[Function]}
      to="profile/profile_id"
    >
      Profile
    </MenuItem$3>
    <MenuItem$3
      component={[Function]}
      onClick={[Function]}
      to="/account"
    >
      Account
    </MenuItem$3>
    <MenuItem$3
      onClick={[Function]}
    >
      Logout
    </MenuItem$3>
  </Menu$2>
</div>
`;

exports[`Content component renders profile without avatar matches snapshot 1`] = `
<div>
  <Avatar$2
    onClick={[Function]}
    size="small"
  />
  <Menu$2
    anchorElement={null}
    onClose={[Function]}
    open={false}
  >
    <MenuItem$3
      component={[Function]}
      onClick={[Function]}
      to="profile/profile_id"
    >
      Profile
    </MenuItem$3>
    <MenuItem$3
      component={[Function]}
      onClick={[Function]}
      to="/account"
    >
      Account
    </MenuItem$3>
    <MenuItem$3
      onClick={[Function]}
    >
      Logout
    </MenuItem$3>
  </Menu$2>
</div>
`;
